<resources>
    <string name="app_name">Covid Symptom Tracker</string>
    <string name="capture_symptoms">Upload</string>
    <string name="start_video_recording">Start Video Recording</string>
    <string name="last_name">LastName</string>
    <string name="symptom_1">Fever</string>
    <string name="symptom_2">Cough</string>
    <string name="symptom_3">Tiredness</string>
    <string name="symptom_4">Shortness of breath</string>
    <string name="symptom_5">Muscle aches</string>
    <string name="symptom_6">Sore throat</string>
    <string name="symptom_7">Runny nose</string>
    <string name="symptom_8">Headache</string>
    <string name="symptom_9">Chest pain</string>
    <string name="symptom_10">Pink eye</string>
    <string name="start_respiratory">Start</string>
    <string name="measure_respiratory_rate">Measure Respiratory Rate</string>
    <string name="please_rate_your_symptoms">Please Rate Your Symptoms</string>
    <string name="upload_db">Upload DB</string>
    <string name="select_date">Select Date</string>
    <string name="submit">Submit</string>
    <string name="select_subject">Select Subject</string>
    <string-array name="subject_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
</resources>