<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/symptom1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:text="@string/symptom_1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/symptom2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:text="@string/symptom_2"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptom1" />

    <TextView
        android:id="@+id/symptom3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:text="@string/symptom_3"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptom2" />

    <TextView
        android:id="@+id/symptom4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:text="@string/symptom_4"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptom3" />

    <TextView
        android:id="@+id/symptom5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:text="@string/symptom_5"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptom4" />

    <TextView
        android:id="@+id/symptom6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:text="@string/symptom_6"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptom5" />

    <TextView
        android:id="@+id/symptom7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:text="@string/symptom_7"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptom6" />

    <TextView
        android:id="@+id/symptom8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:text="@string/symptom_8"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptom7" />

    <TextView
        android:id="@+id/symptom9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:text="@string/symptom_9"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptom8" />

    <TextView
        android:id="@+id/symptom10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:text="@string/symptom_10"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptom9" />


    <Button
        android:id="@+id/submit_symptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_rate_your_symptoms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <RatingBar
        android:id="@+id/symptomRating10"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="340dp"
        android:isIndicator="false"
        android:numStars="5"
        android:scaleX="1"
        android:scaleY="1"
        android:stepSize="1"
        app:layout_constraintStart_toEndOf="@+id/symptom1"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/symptomRating9"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="308dp"
        android:isIndicator="false"
        android:numStars="5"
        android:scaleX="1"
        android:scaleY="1"
        android:stepSize="1"
        app:layout_constraintStart_toEndOf="@+id/symptom1"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/symptomRating8"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="276dp"
        android:isIndicator="false"
        android:numStars="5"
        android:scaleX="1"
        android:scaleY="1"
        android:stepSize="1"
        app:layout_constraintStart_toEndOf="@+id/symptom1"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/symptomRating7"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="244dp"
        android:isIndicator="false"
        android:numStars="5"
        android:scaleX="1"
        android:scaleY="1"
        android:stepSize="1"
        app:layout_constraintStart_toEndOf="@+id/symptom1"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/symptomRating6"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="212dp"
        android:isIndicator="false"
        android:numStars="5"
        android:scaleX="1"
        android:scaleY="1"
        android:stepSize="1"
        app:layout_constraintStart_toEndOf="@+id/symptom1"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/symptomRating5"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="180dp"
        android:isIndicator="false"
        android:numStars="5"
        android:scaleX="1"
        android:scaleY="1"
        android:stepSize="1"
        app:layout_constraintStart_toEndOf="@+id/symptom1"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/symptomRating4"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="148dp"
        android:isIndicator="false"
        android:numStars="5"
        android:scaleX="1"
        android:scaleY="1"
        android:stepSize="1"
        app:layout_constraintStart_toEndOf="@+id/symptom1"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/symptomRating3"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="116dp"
        android:isIndicator="false"
        android:numStars="5"
        android:scaleX="1"
        android:scaleY="1"
        android:stepSize="1"
        app:layout_constraintStart_toEndOf="@+id/symptom1"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/symptomRating2"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="84dp"
        android:isIndicator="false"
        android:numStars="5"
        android:scaleX="1"
        android:scaleY="1"
        android:stepSize="1"
        app:layout_constraintStart_toEndOf="@+id/symptom1"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/symptomRating1"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="52dp"
        android:isIndicator="false"
        android:numStars="5"
        android:scaleX="1"
        android:scaleY="1"
        android:stepSize="1"
        app:layout_constraintStart_toEndOf="@+id/symptom1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/upload_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_db"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.949" />
</androidx.constraintlayout.widget.ConstraintLayout>